# qdrant-exporter

./: .env  .env.example  .env.local  .gitignore  Dockerfile  Makefile  README.md  client.go  client_test.go  collector.go  collector_test.go  config.go  docker-compose.yml  explain.md  go.mod  go.sum  main.go  pyproject.toml  readme.md  roadmap.md
.github/workflows/: ci.yml
examples/: grafana-dashboard.json  prometheus.yml  prometheus_host.yml
python/: test.py
python_exporter/: README.md
python_exporter_sdk/: __init__.py  client.py  exceptions.py  models.py
tests/: inspect_exporter.py  test_python_exporter_sdk.py
